--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,53 @@
 apply plugin: 'java'
 
+buildscript {
+
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+    }
+}
+
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
     testCompile "junit:junit:4.12"
 }
+
+ext {
+    bintrayUser = System.getenv("BINTRAY_USER")
+    bintrayKey = System.getenv("BINTRAY_API_KEY")
+
+    bintrayRepo = 'maven'
+    bintrayName = 'morton'
+
+    publishedGroupId = 'com.gojuno.morton'
+    libraryName = 'morton-java'
+    artifact = 'morton'
+
+    libraryDescription = 'Morton Pack/Unpack Library'
+
+    siteUrl = 'https://github.com/gojuno/morton-java'
+    gitUrl = 'https://github.com/gojuno/morton-java.git'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'iced'
+    developerName = 'Andrew Kirilenko'
+    developerEmail = 'iced@gojuno.com'
+
+    licenseName = 'The BSD 3-Clause License'
+    licenseUrl = 'https://github.com/gojuno/morton-java/blob/master/LICENSE'
+    allLicenses = ["BSD-3-Clause"]
+
+    // Optional signing
+    gpgSign = false
+    gpgPassphrase = null
+}
+
+apply from: "bintray.gradle"
